Closed Bug 1141361 Opened 11 years ago Closed 11 years ago

Reuse the same thread when we start/stop vsync event for the windows vsync thread

Categories

(Core :: Graphics, defect)

All
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: mchang, Assigned: mchang)

References

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1139253 +++ +++ This bug was initially created as a clone of Bug #1102631 +++ Currently, we call base::Thread::Start()/Stop() when we enable/disable the vsync thread. This will create/delete the thread for Start()/Stop() in the underlying platform. Just reuse the same thread.
Just start / stop the thread once during construction / destruction of the object. Otherwise, we just set the mEnabledVsync flag, which should put the thread to sleep.
Attachment #8574994 - Flags: review?(jmuizelaar)
Attachment #8574994 - Flags: review?(jmuizelaar) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: