Bug 1141361 - Reuse the same thread when we start/stop vsync event for the windows vsync thread. r=jrmuizel